codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_teach_enabled_info_cell.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: drain_history_text(&mut rx)
---
• Teaching mode enabled. Future replies may include compact Teaching note callouts when they help.
