codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_agent_statusline_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codewith to do anything                                                   "
"                                                                                "
"  Reviewing patch                                                               "
